--- a/app/views/clockings/new.html.erb
+++ b/app/views/clockings/new.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', clocking: @clocking %>
 
-<%= link_to 'home', root_path %>
+<%= link_to 'Back to All Clockings', clockings_path %>
 </div>
