--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -24,7 +24,7 @@
 
   <div class="form-group field">
     <%= form.label :icon %>
-    <%= form.file_field :icon, class: "form-control" %>
+    <%= form.file_field :icon, class: "form-control-file" %>
     <small id="iconupload" class="form-text text-muted">Please use a 500X350 PNG or JPEG image</small>
   </div>
 
