--- a/app/views/clockings/edit.html.erb
+++ b/app/views/clockings/edit.html.erb
@@ -2,6 +2,5 @@
 
 <%= render 'form', clocking: @clocking %>
 
-<%= link_to 'Show', [@subject, @clocking] %> |
-<%= link_to 'Back', subject_clockings_path(@subject) %>
+<%= link_to 'Back to All Clockings', clockings_path %>
 </div>
