--- a/app/views/subjects/_footer.html.erb
+++ b/app/views/subjects/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="footer green-bg w-100 lt-gray-clr">
   <div class="ft-border m-3 p-3 text-center border-light">
     <h3 class="ft-create">
-      <%= link_to 'Create New Clocking', select_path, class: 'home-link lt-gray-clr font-16 font-weight-lighter' %>
+      <%= link_to 'Create New Clocking', new_clocking_path, class: 'home-link lt-gray-clr font-16 font-weight-lighter' %>
     </h3>
   </div>
 </div>
