--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -30,7 +30,7 @@
                   </div>
               </div>
               <div class="col-2 task">
-                <div class="<%= 'remove-external' if subject.title == 'External' %>">
+                <div>
                   <p class="task-p mb-2"><%= link_to 'Show', subject %></p>
                   <p class="task-p mb-2"><%= link_to 'Edit', edit_subject_path(subject) %></p>
                   <p class="task-p mb-2"><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></p>
