Add signed_in condition to display username

--- a/app/views/layouts/_mobile_nav.html.erb
+++ b/app/views/layouts/_mobile_nav.html.erb
@@ -1,7 +1,7 @@
 <ul class="list-group list-group-flush blue-bg lt-gray-clr">
   <li class="list-group-item blue-bg border-btm py-3">
     <i class="fas fa-user-graduate px-2" aria-hidden="true"></i>
-    <%= link_to "#{current_student.username}", root_path, class: 'home-link lt-gray-clr home' %>
+    <%= link_to "#{user_name}", root_path, class: 'home-link lt-gray-clr home' %>
   </li>
   <li class="list-group-item blue-bg border-btm py-3">
     <i class="fas fa-home px-2" aria-hidden="true"></i>
