--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -42,5 +42,10 @@
     </div>
   </div>
 </div>
-<%= render "subjects/footer"%>
-
+<div class="footer green-bg w-100 lt-gray-clr">
+  <div class="ft-border m-3 p-3 text-center border-light">
+    <h3 class="ft-create">
+      <%= link_to 'Create New Subject', new_subject_path, class: 'home-link lt-gray-clr font-16 font-weight-lighter' %>
+    </h3>
+  </div>
+</div>
