Add styles to the edit and destroy buttons in the subject show and index pages

--- a/app/views/clockings/external.html.erb
+++ b/app/views/clockings/external.html.erb
@@ -1,4 +1,4 @@
-<% content_for :h1, "EXTERNAL CLOCKINGS" %>
+<% content_for :h1, "ALL MY EXTERNAL CLOCKINGS" %>
 <% content_for :study_mate, "EXTERNAL CLOCKINGS" %>
 <% content_for :h4, "Non Subject Based Clockings" %>
 <% content_for :count, "#{count_clock} Hours" %>
