--- a/app/views/clockings/index.html.erb
+++ b/app/views/clockings/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :h1, "ALL CLOCKINGS" %>
+<% content_for :h1, "ALL MY CLOCKINGS" %>
 <% content_for :study_mate, "ALL CLOCKINGS" %>
 <% content_for :h4, "Subject and Non Based Clockings" %>
 <% content_for :count, "#{count_clock} Hours" %>
