--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -16,7 +16,7 @@
           <div class="card mb-3">
             <div class="row no-gutters">
               <div class="col-3 card-wrap">
-                <%= sub_icon(subject) %>
+                <%= link_to sub_icon(subject), subject_path(subject) %>
               </div>
               <div class="col-7">
                   <div class="card-body py-1">
@@ -29,11 +29,11 @@
                     <p class="card-detail mb-2"><%= subject.description %></p>
                   </div>
               </div>
-              <div class="col-2 task">
-                <div>
+              <div class="col-2 task d-flex flex-column align-items-center justify-content-center">
+                <div class ="">
                   <p class="task-p mb-2"><%= link_to 'Show', subject %></p>
-                  <p class="task-p mb-2"><%= link_to 'Edit', edit_subject_path(subject) %></p>
-                  <p class="task-p mb-2"><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+                  <p class="task-p mb-2"><%= link_to 'Edit', edit_subject_path(subject), class: "text-info" %></p>
+                  <p class="task-p mb-2"><%= link_to 'Destroy', subject, class: "text-danger", method: :delete, data: { confirm: 'Are you sure?' } %></p>
                 </div>
               </div>
             </div>
