Fix navigation links

--- a/app/views/clockings/new.html.erb
+++ b/app/views/clockings/new.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form', clocking: @clocking %>
 
-<%= link_to 'Back to All Clockings', clockings_path %>
+<span><%= link_to 'Back to All Clockings', clockings_path %></span> |
+<span><%= link_to 'Create New Subject', new_subject_path %></span>
 </div>
