--- a/app/views/subjects/new.html.erb
+++ b/app/views/subjects/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form', subject: @subject %>
 
-<%= link_to 'Back', subjects_path %>
+<%= link_to 'Back to All Clockings', clockings_path %>
+</div>
