--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -8,7 +8,7 @@
       <div class="chunk container-fluid pt-3">
         <div class="row">
           <div class="clock-type col-10">
-            <h4 class="text-center font-weight-lighter text-secondary">Your Subjects</h4>
+            <h4 class="text-center font-weight-lighter text-secondary">Subject List</h4>
           </div>
         </div>
       </div>
