--- a/app/views/clockings/edit.html.erb
+++ b/app/views/clockings/edit.html.erb
@@ -1,6 +1,7 @@
-<h1 class="text-center">Editing Clocking</h1>
+<% content_for :study_mate, "New Clocking" %>
 
 <%= render 'form', clocking: @clocking %>
 
 <%= link_to 'Back to All Clockings', clockings_path %>
+</div>
 </div>
