--- a/app/views/clockings/new.html.erb
+++ b/app/views/clockings/new.html.erb
@@ -1,7 +1,8 @@
-<h1 class="text-center">New Clocking</h1>
+<% content_for :study_mate, "New Clocking" %>
 
 <%= render 'form', clocking: @clocking %>
 
 <span><%= link_to 'Back to All Clockings', clockings_path %></span> |
 <span><%= link_to 'Create New Subject', new_subject_path %></span>
+</div>
 </div>
