--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
       <h1 class="p-3 text-center m-0 blue-bg lt-gray-clr font-weight-lighter"><%= yield(:h1) %></h1>
     </div>
 
-    <nav class="navbar navbar-toggleable-md navbar-light blue-bg d-md-none sticky-top py-4">
+    <nav class="navbar navbar-toggleable-md navbar-light blue-bg sticky-top py-4">
       <div class="col-3">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="lt-gray-clr"><i class="fas fa-bars"></i></span>
