--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -1,3 +1,4 @@
+<div class=" m-auto py-5 bg-white">
 <div class="d-form m-auto">
 <%= form_with(model: subject, local: true) do |form| %>
   <% if subject.errors.any? %>
@@ -13,13 +14,11 @@
   <% end %>
 
   <div class="form-group field">
-    <%= form.label :title %>
-    <%= form.text_field :title, class: "form-control", autofocus: true %>
+    <%= form.text_field :title, class: "form-control", placeholder: "Title", autofocus: true %>
   </div>
 
   <div class="form-group field">
-    <%= form.label :description %>
-    <%= form.text_field :description, class: "form-control" %>
+    <%= form.text_field :description, class: "form-control", placeholder: "Description" %>
   </div>
 
   <div class="form-group field">
