--- a/app/views/subjects/_nav.html.erb
+++ b/app/views/subjects/_nav.html.erb
@@ -1,5 +1,5 @@
-<div class="col-md-3 hidden-xs py-md-0 px-0 side-menu">
-  <nav class="side-nav navbar blue-bg d-none d-md-block sticky-top">
-    <%= render 'layouts/mobile_nav'%>
-  </nav>
-</div>
+<%# <div class="col-md-3 hidden-xs py-md-0 px-0 side-menu"> %>
+  <%# <nav class="side-nav navbar blue-bg d-none d-md-block sticky-top"> %>
+    <%# <%= render 'layouts/mobile_nav'%>
+  <%# </nav> %>
+<%# </div> %>
