--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -69,10 +69,10 @@
 }
 
 .form-control {
-  border-left: 0px;
-  border-right: 0px;
-  border-radius: 0px;
-  border-top: 0px;
+  border-left: 0;
+  border-right: 0;
+  border-radius: 0;
+  border-top: 0;
 }
 
 .outer {
@@ -136,7 +136,6 @@
   box-shadow: silver 0 5px 10px 0;
 }
 
-/* Set gray background color and 100% height */
 .sidenav {
   background-color: #f1f1f1;
   height: 100%;
@@ -146,9 +145,6 @@
   width: 75%;
 }
 
-// .form-control:focus {
-// border: none;
-// }
 .side-menu {
   position: relative;
   z-index: 1;
