--- a/app/views/clockings/_form.html.erb
+++ b/app/views/clockings/_form.html.erb
@@ -14,7 +14,7 @@
       <% end %>
     
       <div class="form-group field">
-        <%= form.text_field :topic, class: "form-control", placeholder: "Topic",  autofocus: true %>
+        <%= form.text_field :topic, class: "form-control", placeholder: "Topic" %>
       </div>
     
       <div class="form-group field">
