--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -14,7 +14,7 @@
   <% end %>
 
   <div class="form-group field">
-    <%= form.text_field :title, class: "form-control", placeholder: "Title", autofocus: true %>
+    <%= form.text_field :title, class: "form-control", placeholder: "Title" %>
   </div>
 
   <div class="form-group field">
